[package]
name = "cargo-lockstep"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
semver = "1.0.23"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
walkdir = "2.5.0"
